2022-11-26  Jacob Bachmeyer  <jcb@gnu.org>

	* doc/dejagnu.texi (DejaGnu unit test protocol): Add end marker
	line using "END" to allow detecting tests that exit prematurely.
	The "Totals:" line was previously used for this purpose, but it
	does not match the pattern documented as reserved for carrying
	unit test results and information.

	* lib/dejagnu.exp (host_execute): Remove test for "Totals" line.
	(host_execute): Add corresponding support for the new line types.

	* dejagnu.h (totals): Add end marker.
	(TestState::totals): Likewise.

2022-10-04  Jacob Bachmeyer  <jcb@gnu.org>

	PR58065

	* lib/dg.exp (dg-test): Store results of analyzing messages in a
	list, then report them to the framework after giving the pruning
	callback an opportunity to skip the test case.

	* testsuite/runtest.libs/dg.test: Add tests for skipping tests
	based on special result codes from mock-dg-prune.
	(mock-dg-test): Add directive for output text.
	(mock-dg-prune): Recognize special markers for
	UNRESOLVED/UNSUPPORTED/UNTESTED result codes.

2022-10-01  Jacob Bachmeyer  <jcb@gnu.org>

	PR58065

	* testsuite/runtest.libs/mockutil.tcl (test_proc_with_mocks):
	Report test failure instead of raising errors.

	* testsuite/runtest.libs/dg.test: Add more unit tests.
	(eval_tests): Copy this procedure...
	* testsuite/runtest.libs/target.test (eval_tests): ...from here.

2022-09-30  Jacob Bachmeyer  <jcb@gnu.org>

	PR58065

	* testsuite/runtest.libs/mockutil.tcl (test_proc_with_mocks): Add
	usage comment and option to match number of calls for test.
	(create_test_interpreter): Add support for mockvfs.

	* testsuite/runtest.libs/dg.test: New file.

2022-09-29  Jacob Bachmeyer  <jcb@gnu.org>

	PR58065

	* testsuite/runtest.libs/mockvfs.tcl: New file.

2022-09-26  Jacob Bachmeyer  <jcb@gnu.org>

	* testsuite/runtest.libs/libs.exp (process_test): Add forward
	slash to the list of characters recognized as text.

2022-01-21  Jacob Bachmeyer  <jcb@gnu.org>

	PR53427
